// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project should render 1`] = `
<body>
  <div>
    <a
      class="border dark:border-gray-800 border-gray-100 w-full flex flex-col gap-4 p-6 rounded-xl hover:bg-gray-50/50 dark:hover:bg-gray-800/30 cursor-pointer group"
      href="project-url"
      target="blank"
    >
      <div
        class="flex justify-between"
      >
        <h3
          class="flex gap-3 items-baseline font-medium dark:text-gray-200 text-xl font-medium"
        >
          Project name
        </h3>
        <div
          class="flex gap-3 items-center text-gray-300 dark:text-gray-600 text-sm"
        >
          Jan 01, 2022
        </div>
      </div>
      <p
        class="text-gray-500 dark:text-gray-300 mb-2"
      >
        Project description.
      </p>
      <hr
        class="border-gray-100 dark:border-gray-800"
      />
      <div
        class="gap-1 text-sm items-center text-gray-300 dark:text-gray-600 group-hover:text-blue-400 dark:group-hover:text-blue-300 flex"
      >
        Go to link
        <svg
          class="stroke-gray-300 dark:stroke-gray-600 group-hover:stroke-blue-400 dark:group-hover:stroke-blue-300"
          fill="none"
          height="1rem"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="7"
            x2="17"
            y1="17"
            y2="7"
          />
          <polyline
            points="7 7 17 7 17 17"
          />
        </svg>
      </div>
    </a>
  </div>
</body>
`;

exports[`Project should render with badge 1`] = `
<body>
  <div>
    <a
      class="border dark:border-gray-800 border-gray-100 w-full flex flex-col gap-4 p-6 rounded-xl hover:bg-gray-50/50 dark:hover:bg-gray-800/30 cursor-pointer group"
      href="project-url"
      target="blank"
    >
      <div
        class="flex justify-between"
      >
        <h3
          class="flex gap-3 items-baseline font-medium dark:text-gray-200 text-xl font-medium"
        >
          Project name
          <div
            class="whitespace-nowrap text-xs rounded-full bg-blue-50/50 dark:bg-blue-800/20 border border-blue-300 text-blue-600 dark:text-blue-300 max-w-min px-1.5"
          >
            badge label
          </div>
        </h3>
        <div
          class="flex gap-3 items-center text-gray-300 dark:text-gray-600 text-sm"
        >
          Jan 01, 2022
        </div>
      </div>
      <p
        class="text-gray-500 dark:text-gray-300 mb-2"
      >
        Project description.
      </p>
      <hr
        class="border-gray-100 dark:border-gray-800"
      />
      <div
        class="gap-1 text-sm items-center text-gray-300 dark:text-gray-600 group-hover:text-blue-400 dark:group-hover:text-blue-300 flex"
      >
        Go to link
        <svg
          class="stroke-gray-300 dark:stroke-gray-600 group-hover:stroke-blue-400 dark:group-hover:stroke-blue-300"
          fill="none"
          height="1rem"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="7"
            x2="17"
            y1="17"
            y2="7"
          />
          <polyline
            points="7 7 17 7 17 17"
          />
        </svg>
      </div>
    </a>
  </div>
</body>
`;
